--- a/gb/25/1/14/n14413569.md
+++ b/gb/25/1/14/n14413569.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>多个视频曝光缅甸电诈园区鲜为人知的情况</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>多个视频曝光缅甸电诈园区鲜为人知的黑幕</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14413574-a6b0e90ba36492be479c6dea531d0a1d-600x400.jpg" />///image2=```diff
 - （视频截图）
 ```
@@ -14,58 +14,61 @@
 <p>KK电诈园区位于缅甸克伦邦妙瓦底，其地处缅泰两国边境，两国以河为界，一座移动浮桥往返两岸渡口。</p>
 <p>该博主正在拍摄时，移动浮桥已经将一辆白色皮卡车从泰国国境线一侧运往对岸的缅甸KK电诈园。这辆皮卡车上岸后，受到来自电诈园区一侧的警卫盘查，放行后，皮卡车沿园区围墙绕行从正门进入电诈园区。</p>
 <p>该博主表示，这些人从泰国一侧渡河进入缅甸，非常便利，完全没有（两国军警）看管，如果这辆皮卡车里面藏着人（被劫持人员），完全有可能的。“难道泰国警方不知道这里可以非法入境？我现在感觉后背发凉。”该博主说。</p>
-<p><center><a title="近日，有中国博主利用无人机高空观察缅甸KK电诈园区。KK电诈园区位于缅甸东部克伦邦妙瓦底，其地处缅泰两国边境，两国以河为界，该园区被指为地区电信诈骗和人口贩卖的中心。" src=""></a><a href="https://dgk92ykceobaf.cloudfront.net/K3k3LEqgi"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbm14e1soo67fUqSkBx2CLFN18a1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>博主在视频中说，整个电诈园区面积很大，周围有四五米的高墙，墙上有铁丝网，每隔30米左右一个岗亭。电诈园区内还有一个所谓的鳄鱼池，这可能是水牢。</p>
+<p><center><a title="近日，有中国博主利用无人机高空观察缅甸KK电诈园区。KK电诈园区位于缅甸东部克伦邦妙瓦底，其地处缅泰两国边境，两国以河为界，该园区被指为地区电信诈骗和人口贩卖的中心。" loading="lazy" data2-src=""></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/Q6f3LEqgj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbm14e1soo67fUqSkBx2CLFN18a1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>博主在视频中说，整个电诈园区面积很大，周围有四五米的高墙，墙上有铁丝网，每隔30米左右一个岗亭。电诈园区内还有一个所谓的鳄鱼池，这可能是水牢。</p>
 <p>博主说，正值当日早上9点，无人机还拍摄到，缅甸KK电诈园区内有几个人正在园区内跑步，但跑步者却没有穿衣服，这些人可能受到了体罚。</p>
 <h2>多个视频显示缅甸电诈园区的诡异</h2>
 <p>遭绑架者的家属转发的另一个视频，是由一位中国旅游博主在与缅甸电诈园区一河之隔的泰国渡口附近拍摄的，离园区大致有三四公里。该博主说，他发现当地人对外来陌生人十分警惕，这让他感觉很恐惧。</p>
 <p>博主在视频中说，一群人在一艘小船上，小船不到三分钟就划到了对岸，对岸就是位于缅甸的KK电诈园区。他们就这样上去了，就这么简单地偷渡到了缅甸。</p>
 <p>博主说，在拍摄时，船上的一帮人一直盯着他。这些人上岸后，一直没有走，一直看着他。</p>
-<p><center><a title="一位中国旅游博主拍摄视频近距离观察缅甸电诈园区。 ｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://dgk92ykceobaf.cloudfront.net/K3k3LEqgi"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbm9kt69kt6kpIWTFmf1bn0y1381c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>在另外一段视频中，缅甸妙瓦底的华人提醒一位中国旅游博主，KK电诈园区很危险，并披露KK园区有两万中国人囚禁于此做电诈。</p>
+<p><center><a title="一位中国旅游博主拍摄视频近距离观察缅甸电诈园区。 ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/Q6f3LEqgj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbm9kt69kt6kpIWTFmf1bn0y1381c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>在另外一段视频中，缅甸妙瓦底的华人提醒一位中国旅游博主，KK电诈园区很危险，并披露KK园区有两万中国人囚禁于此做电诈。</p>
 <p>视频中，那名华人说，他和几个被骗到KK电诈园区的印度人、非洲人有对话交流。一个在KK电诈园区工作的非洲女孩对他说，KK电诈园里有很多很大的建筑，像集中营一样。每一栋楼里面至少有1,000人。在那里工作的一个印度人讲，一个宿舍里面住8个人。他们讲里面的大boss都是中国人。</p>
 <p>那名华人还说，印度人工作一年后从园区出来，都没有护照，只好去曼谷找大使馆，在大使馆的帮助下回国。</p>
 <p>那名华人披露，这个印度人说KK园区非常危险，他看见很多中国人逃跑，然后中国老板就派黑帮抓他们，然后双手绑着再绑回去。</p>
 <p>视频中，那名华人说，非洲女孩告诉他，中国人的工作时间更长，更辛苦，一天要工作16个小时。</p>
 <p>对于KK园区器官买卖的传闻，那名华人在视频中说，有器官贩卖这样的事情，是地下那种。</p>
-<p><center><a title="网传视频：缅甸妙瓦底的华人提醒旅游博主kk园区很危险，kk园区有两万中国人囚禁做电诈！妙瓦底诈骗园区除了有中国奴隶还有非洲黑人 印度人 俄罗斯人欧美人 也是被骗来。" src=""></a><a href="https://dgk92ykceobaf.cloudfront.net/K3k3LEqgi"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbm7on0ccc72boKbC9kdzSXk1031c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a title="网传视频：缅甸妙瓦底的华人提醒旅游博主kk园区很危险，kk园区有两万中国人囚禁做电诈！妙瓦底诈骗园区除了有中国奴隶还有非洲黑人 印度人 俄罗斯人欧美人 也是被骗来。" loading="lazy" data2-src=""></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/Q6f3LEqgj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbm7on0ccc72boKbC9kdzSXk1031c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>缅甸KK电诈园区</h2>
 <p>实际上，电诈园区（又称“诈骗园区”）早已遍布缅甸各地，除佤邦、掸邦东部第四特区（小勐拉）外，缅甸的北部及东部地区的电诈园区包括：前果敢自治区、亨利集团、卧虎山庄、百胜集团公司（又称“新百胜集团”）、苍胜集团、鑫百利公司、福利来集团。</p>
 <p>上述提到位于缅甸东南部的克伦邦妙瓦底的电诈园区包括臭名昭著的KK园区，以及泰昌园区、交克园区。</p>
-<p><center><a title="网传视频：儿子被缅北诈骗团伙拿AK顶着头，和国内的父亲视频通话，此时父亲该有多绝望啊，嘴里说着没钱，但又不能把话说绝了，被绑的儿子此时已经吓破了胆，父亲是自己的唯一救命稻草，不断地向父亲认错，让父亲筹款救自己，父亲也是很明白的，即使交了赎金这帮人也不" src=""></a><a href="https://dgk92ykceobaf.cloudfront.net/K3k3LEqgi"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbm7pfhvjg1U0MKzz6P4jTY71521c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>根据此前公开的报导，KK园区周围是4米高加装铁丝网的围墙并且布满电网，隔百米设有哨站，有武装人员持枪巡视。园区里面有超市、医院、餐厅、酒店、赌场等，还有武装部队开车巡逻、定点站哨。被以高薪工作为诱饵骗来的受害者若诈骗业绩不达标或想逃跑，就会被关水牢、毒打和灌辣椒水。</p>
+<p><center><a title="网传视频：儿子被缅北诈骗团伙拿AK顶着头，和国内的父亲视频通话，此时父亲该有多绝望啊，嘴里说着没钱，但又不能把话说绝了，被绑的儿子此时已经吓破了胆，父亲是自己的唯一救命稻草，不断地向父亲认错，让父亲筹款救自己，父亲也是很明白的，即使交了赎金这帮人也不" loading="lazy" data2-src=""></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/Q6f3LEqgj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbm7pfhvjg1U0MKzz6P4jTY71521c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>根据此前公开的报导，KK园区周围是4米高加装铁丝网的围墙并且布满电网，隔百米设有哨站，有武装人员持枪巡视。园区里面有超市、医院、餐厅、酒店、赌场等，还有武装部队开车巡逻、定点站哨。被以高薪工作为诱饵骗来的受害者若诈骗业绩不达标或想逃跑，就会被关水牢、毒打和灌辣椒水。</p>
 <p>KK园区受到当地军阀的保护，利用加密货币钱包来储存电诈受害者的款项。园区已建立器官贩卖的庞大管道，因为是人口贩卖链条的终点站，受害者不会再被转卖，没有利用价值的受害者就会被杀害后取走器官贩卖。</p>
 <p>据报导，KK园区的老板分别是黄鹏、游子梦、张金、金姓人士和绰号“冬瓜”的人士，均为福建籍，其中“冬瓜”是KK园区大股东。在缅北电诈园区覆灭后，KK园区进行了第四期大规模扩建。</p>
-<p><center><a title="【 #安迪声 苦难的中国人】被骗缅甸的王星被救了，其他同时遭遇不幸的49人呢？其中还有两个美女。救援还要分三六九等吗？说明里面是黑白通吃，幕后黑手是中共政府当保护伞！缅甸中国嘎腰子园区背后老板余伦凯，隶属中国国家安全部。 " src=""></a><a href="https://dgk92ykceobaf.cloudfront.net/K3k3LEqgi"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbl42dehhc1xBiWlbUigONHM1k81c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>旅美时事评论员唐靖远在自媒体“靖远快评”中表示，“这些电诈园区，本质上就是一个人矿处理中心，它是一个庞大的综合性的杀人工厂，里面包括黄、赌、毒、诈骗、绑架勒索、杀人、贩卖人体器官等等，每一个链条、每一个行业都是分工明确。”</p>
-<p>“而且所有的电诈园区，都是由中共政府出面系统的包装，几乎全都是挂着那个‘一带一路’冠冕堂皇的招牌。例如所谓的妙瓦底KK电诈园区老板佘智江所负责的亚太新城，是由中共的侨联和发改委直接为其站台，他本人甚至应邀出席过菲律宾招待习近平的宴会。”</p>
-<p>唐靖远认为，“虽然佘智江已经被中共招募为间谍，但是他也是前台的一个工具而已。中共国安部曾派遣两名专员在他的左右负责监控整个园区项目的运作。据说在佘智江之外，还有6个实质控制人维持着当地整个局面。即使佘智江于2022年被中共抓捕后，但这个电诈园区依然不受影响。”<ahref=""></a><a href="https://dgk92ykceobaf.cloudfront.net/K3k3LEqgi"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/live/1hbjsej07m83oKXbR38JSgc9b1a41c">点击观看“靖远快评”</a>）</p>
+<p><center><a title="【 #安迪声 苦难的中国人】被骗缅甸的王星被救了，其他同时遭遇不幸的49人呢？其中还有两个美女。救援还要分三六九等吗？说明里面是黑白通吃，幕后黑手是中共政府当保护伞！缅甸中国嘎腰子园区背后老板余伦凯，隶属中国国家安全部。 " loading="lazy" data2-src=""></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/Q6f3LEqgj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hbl42dehhc1xBiWlbUigONHM1k81c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>旅美时事评论员唐靖远近日在自媒体“靖远快评”中表示，“这些电诈园区，本质上就是一个人矿处理中心，它是一个庞大的综合性的杀人工厂，里面包括黄、赌、毒、诈骗、绑架勒索、杀人、贩卖人体器官等等，每一个链条、每一个行业都是分工明确。”</p>
+<p>“而且所有的电诈园区，都是由中共政府出面系统的包装，几乎全都是挂着那个‘一带一路’冠冕堂皇的招牌。”他说。</p>
 <p>责任编辑：郑浩宇#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386103.md#1">中共迫害法轮功的工作计划和具体要求被曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394464.md#1">习访澳门被指草木皆兵 澳媒遭言论管控被迫删文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395823.md#1">被关精神病院前 李宜雪发多个视频曝中共黑幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408361.md#1">山西运城车管所黑幕：每个岗位都收贿 雁过拔毛</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11403595.md#1" target="_blank">林辉：中共高官披露内幕 毛奢侈嫉妒唯我独尊</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/16/n10307769.md#1" target="_blank">中共淫乱的前生今世（10）溃堤效应</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410876.md#1">【未解之谜】触摸UFO 美军人意外接获神秘信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404364.md#1">清朝名臣方观承官至总督 相士早预知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402150.md#1">元配宽容不伦婢女得到福报 正直知县因一念不容下场凄惨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781563.md#1">在宋朝作诗能转运？宋祁错失状元得赐婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413571.md#1">【财经非常道】美法庭激辩后 TikTok更悬了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413567.md#1">【菁英论坛】上海禁售活禽三年 禽流感或已爆发</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413507.md#1">【佳音时刻】川普就职庆典 亮点抢先看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410788.md#1">高致命禽流感H5N1爆发 业内人士揭中共掩瞒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412447.md#1">银川成都天空惊现大量不明发光物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14412053.md#1">今年首个满月与火星相遇 如何观赏一文看懂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412852.md#1">请黄晓明呵护赵丽颖 李冰冰温暖话语登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413559.md#1">被传洛杉矶两套豪宅被烧毁 冯小刚回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412785.md#1">好莱坞明星救济受灾户 裘莉开放豪宅收容亲友</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413305.md#1">淡出演艺圈多年 李威因北市精舍命案遭约谈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413620.md#1">野火仍肆虐 李奥纳多搭私人飞机离开加州惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412475.md#1">研究：人们常吃的海鲜中含有塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409423.md#1">百岁人瑞常吃食物前10名 选对食物抗老化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411695.md#1">什么是“肌肉记忆”？ 在生活中如何运用？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410495.md#1">如何分辨是鼻子过敏还是感冒？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413186.md#1">在家里赤脚走路好不好？ 看看医生怎么说</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/14/n14413569.htm">多个视频曝光缅甸电诈园区鲜为人知的情况</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/14/n14413569.htm">多个视频曝光缅甸电诈园区鲜为人知的黑幕</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413569.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
